--- a/cyberpunkred-raycw.css
+++ b/cyberpunkred-raycw.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro|Nunito|Source+Code+Pro&display=swap');
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -18,15 +18,36 @@ input[type=number] {
 
 .sheet-character,
 .sheet-lifepath,
-.sheet-cyberware {
+.sheet-cyberware,
+.sheet-netrunning {
   display: none;
 }
 
 .sheet-tabstoggle[value="character"] ~ div.sheet-character,
 .sheet-tabstoggle[value="lifepath"] ~ div.sheet-lifepath,
-.sheet-tabstoggle[value="cyberware"] ~ div.sheet-cyberware {
+.sheet-tabstoggle[value="cyberware"] ~ div.sheet-cyberware,
+.sheet-tabstoggle[value="netrunning"] ~ div.sheet-netrunning {
   display: grid;
 }
+
+.sheet-nbiprogram,
+.sheet-blackice,
+.sheet-hardware {
+  display: none;
+}
+
+
+
+
+
+.sheet-netruntoggle[value="nbi"] ~ div.sheet-nbiprogram 
+,.sheet-netruntoggle[value="blackice"] ~ div.sheet-blackice 
+,.sheet-netruntoggle[value="hardware"] ~ div.sheet-hardware {
+  display: block;
+  grid-area: 2 / 1 / 3 / 4;
+}
+
+
 
 select {
   border: none;
@@ -73,9 +94,207 @@ select {
   display: flex;
 }
 
+.sheet-netrunning .sheet-nav {
+  align-items: flex-end;
+}
+
 .sheet-nav div {
   margin-right: 5px;
 }
+
+/*----------------- NETRUNNING SHEET ------------------*/
+
+.sheet-netrunning {
+  width: 1000px;
+  grid-gap: 4px;
+  grid-template-columns: 1fr 1fr 1.4fr 0.6fr;
+  grid-template-rows: auto auto auto auto;
+  font-family: 'Source Code Pro', monospace;
+}
+
+.sheet-netrunning textarea {
+  width: 100%;
+  border: none;
+  box-sizing: border-box;
+  resize: none;
+  background: none;
+  color: #fff;
+}
+
+.sheet-netrunning input {
+  background: none;
+  border: none;
+  color: #fff;
+}
+
+.sheet-netrunning h1 , .sheet-netrunning h3 , .sheet-netrunning h6 {
+  color: #fff;
+}
+
+.sheet-netrunning .sheet-interface {
+  display: grid;
+  grid-column: 1 / 3;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto auto;
+  grid-gap: 4px;
+  color: #fff;
+}
+
+.sheet-netrunning .sheet-interface div {
+  background: #CD272C;
+  padding: 4px;
+}
+
+.sheet-netrunning .sheet-interface .sheet-title {
+  grid-column: 1 / 6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sheet-netrunning .sheet-interface .sheet-rank {
+  text-align: center;
+}
+
+.sheet-netrunning .sheet-interface input {
+  text-align: center;
+  font-size: 2rem;
+  width: 2.5rem;
+  padding: 0;
+  margin: 0;
+  font-family: 'Source Code Pro', monospace;
+}
+
+.sheet-netrunning .sheet-interface .sheet-general input,
+.sheet-netrunning .sheet-interface .sheet-hardslots input,
+.sheet-netrunning .sheet-interface .sheet-program input {
+  text-align: center;
+  padding-bottom: 5px;
+  width: 6.5rem;
+}
+
+.sheet-netrunning .sheet-interface .sheet-netactions {
+  grid-column: 1 / 7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sheet-netrunning .sheet-interface .sheet-general {
+  grid-column: 1 / 3;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.sheet-netrunning .sheet-interface .sheet-hardslots{
+  grid-column: 3 / 5;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.sheet-netrunning .sheet-interface .sheet-program {
+  grid-column: 5 / 7;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.sheet-netrunning select {
+  background: black;
+  color: #fae800;
+}
+
+.sheet-bg-yellow {
+  background: #fae800;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 4px;
+  padding: 4px;
+}
+
+.sheet-bg-black {
+  background: black;
+  color: #fae800;
+  font-weight: bold;
+  margin-bottom: 4px;
+  padding: 4px;
+}
+
+.sheet-bg-white {
+  background: white;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 4px;
+  padding: 4px;
+}
+
+.sheet-bg-black-item {
+  background: black;
+  color: white;
+  margin-bottom: 4px;
+  padding: 4px;
+}
+
+.sheet-max-width{
+  width: 100%;
+}
+
+.sheet-program-name{
+  width: 18%;
+  box-sizing: border-box;
+}
+
+.sheet-program-class{
+  width: 26%;
+  box-sizing: border-box;
+}
+
+.sheet-program-atk,
+.sheet-program-def,
+.sheet-program-rez {
+  width: 4%;
+  box-sizing: border-box;
+}
+
+.sheet-program-effect{
+  width: 42%;
+  box-sizing: border-box;
+}
+
+.sheet-bi-name{
+  width: 13%;
+  box-sizing: border-box;
+}
+
+.sheet-bi-class{
+  width: 17%;
+  box-sizing: border-box;
+}
+
+.sheet-bi-per,
+.sheet-bi-spd,
+.sheet-bi-atk,
+.sheet-bi-def,
+.sheet-bi-rez {
+  width: 4%;
+  box-sizing: border-box;
+}
+
+.sheet-bi-effect{
+  width: 47%;
+  box-sizing: border-box;
+}
+
+.sheet-hardware-name{
+  width: 20%;
+  box-sizing: border-box;
+}
+
+.sheet-hardware-data{
+  width: 79.5%;
+  box-sizing: border-box;
+}
+
+
 
 /*----------------- CYBERWARE SHEET ------------------*/
 
@@ -400,22 +619,22 @@ input.sheet-toggle:not([value="1"]) ~ button.sheet-toggle > span.sheet-checked {
 }
 
 .sheet-lp .sheet-enemies .sheet-title{
-	grid-column: 1 / 5;
+  grid-column: 1 / 5;
 }
 
 .sheet-lp .sheet-enemies h3, .sheet-lp .sheet-enemies h4{
-	text-align: center;
-	color: white;
+  text-align: center;
+  color: white;
 }
 
 .sheet-lp .sheet-enemies .sheet-item{
-	border: solid 1px  #CD272C;
-	background: none;
-	border-radius: 5px;
+  border: solid 1px  #CD272C;
+  background: none;
+  border-radius: 5px;
 }
 
 .sheet-lp .sheet-enemies .sheet-item textarea{
-	background: none;
+  background: none;
 }
 
 .sheet-lp input, .sheet-lp textarea, .sheet-progression textarea, .sheet-personal textarea, .sheet-rolespecific textarea, 
@@ -432,7 +651,7 @@ input.sheet-toggle:not([value="1"]) ~ button.sheet-toggle > span.sheet-checked {
 
 textarea {
   width: 90%;
-  height: 85%;
+  height: auto;
 }
 
 .sheet-section {
@@ -453,8 +672,8 @@ textarea {
 }
 
 .sheet-statbox {
-	background:white;
-	overflow: hidden;
+  background:white;
+  overflow: hidden;
   clip-path: 
     polygon(
       0% 2rem,                 /* top left */
@@ -1004,4 +1223,71 @@ td.sheet-subskill-header {
   min-width: 1.5em;
   text-align: center;
   border: 2px solid rgba(167, 168, 170,1);
+}
+
+/* Auto-expanding textarea */
+
+.sheet-auto-expand {
+  position: relative;
+  cursor: text;
+  word-wrap: break-word;
+  min-height: 5em;
+}
+.sheet-auto-expand span {
+  visibility: hidden;
+  white-space: pre-wrap;
+  display: block;
+  height: auto;
+}
+.sheet-auto-expand textarea {
+  border: 1px solid white;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  margin: 0;
+  resize: none;
+  height: 100%;
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  background: transparent;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  color: inherit;
+  font: inherit;
+  letter-spacing: inherit;
+  padding: inherit;
+  text-align: inherit;
+  text-transform: inherit;
+}
+
+/* Flex Table Repeating Sections */
+
+.sheet-flex-table {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+
+
+.sheet-flex-table div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.sheet-flex-table input{
+  margin: 0;
+  padding: 0;
+  width: 100% !important;
+  box-sizing: border-box;
+  text-align: center;
+  height: auto;
 }
